--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.0",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
