--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "typescript": "^5.4.5"
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.21",
     "cloudinary": "^2.2.0",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.0",
