--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
