--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
+    "@types/nodemailer": "^6.4.15",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
